| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build | 
|---|---|---|---|---|---|---|
| JDK-8204435 | 11.0.1 | Coleen Phillimore | P4 | Resolved | Fixed | team | 
                    SystemDictionary::do_unloading presently clears dead entries from vm_weak_oop_storage as an initial step.  That should instead be done by the preceeding WeakProcessor usage.  Doing so requires some conditionalization of the WeakProcessor, because not all weak reference processing should do it.  This change will also make it easy to include vm_weak_oop_storage in a parallelized WeakProcessor.
            
- backported by
- 
                    JDK-8204435 Move vm_weak processing from SystemDictionary to WeakProcessor -           
- Resolved
 
-         
- relates to
- 
                    JDK-8072498 Multi-thread JNI weak reference processing -           
- Resolved
 
-         



