src/hotspot/share/gc/shared/weakProcessor.cpp
@@ -23,6 +23,8 @@
  */
 
 #include "precompiled.hpp"
+#include "classfile/systemDictionary.hpp"
+#include "gc/shared/oopStorage.inline.hpp"
 #include "gc/shared/weakProcessor.hpp"
 #include "prims/jvmtiExport.hpp"
 #include "runtime/jniHandles.hpp"
@@ -34,6 +36,7 @@
 void WeakProcessor::weak_oops_do(BoolObjectClosure* is_alive, OopClosure* keep_alive) {
   JNIHandles::weak_oops_do(is_alive, keep_alive);
   JvmtiExport::weak_oops_do(is_alive, keep_alive);
+  SystemDictionary::vm_weak_oop_storage()->weak_oops_do(is_alive, keep_alive);
   JFR_ONLY(Jfr::weak_oops_do(is_alive, keep_alive);)
 }
 
